feat: add movie details in users reviews
